[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fipsign-sdk"
version = "0.9.5"
description = "Post-quantum signing SDK for Python — ML-DSA-65 (NIST FIPS 204)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "FIPSign", email = "sdk@fipsign.dev" }]
keywords = ["post-quantum", "cryptography", "signing", "ml-dsa", "fips", "pqc", "auth"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28",
    "cryptography>=48.0.0",
]

[project.optional-dependencies]
async = ["httpx>=0.24"]
flask = ["flask>=2.0"]
fastapi = ["fastapi>=0.95", "python-multipart>=0.0.6"]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "flask>=2.0",
    "fastapi>=0.95",
    "uvicorn>=0.20",
    "build",
    "twine",
]

[project.urls]
Homepage     = "https://fipsign.dev"
Dashboard    = "https://app.fipsign.dev"
Guide        = "https://fipsign.dev/guide"
Repository   = "https://github.com/fipsign/fipsign-sdk-python"
"Bug Tracker" = "https://github.com/fipsign/fipsign-sdk-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["fipsign*"]

[tool.setuptools.package-data]
fipsign = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
